# disco_skills_bot

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  railway.toml  start.sh
app/bot/: router.py  states.py
app/bot/handlers/: callbacks.py  commands.py  messages.py
app/bot/keyboards/: inline.py
app/core/: config.py  database.py
app/data/: skills.py
app/models/: dialog.py  raw_message.py  stats.py  user.py
app/services/: ai_service.py  dialog_service.py  skill_service.py
docs/dev/: SPEC_1.md  SPEC_2.md  SPEC_3.md
docs/references/: characteristics.md  skills.md
migrations/models/: 0_20260627020944_init.py  1_20260628000000_spec3_stats_ideas.py  2_20260628000001_pgvector_embeddings.py  3_20260629000000_dialog_chat_id.py  4_20260630000000_raw_messages.py
